# node-dicom-rs

./: Cargo.toml  README.md  index.d.ts  index.js  index.mjs  package.json
.github/workflows/: CI.yml
docker/: README.md  docker-compose.yml  orthanc.json
docs/: dicomfile.md  findscu.md  getscu.md  movescu.md  querybuilder.md  storescp.md  storescu.md
examples/pacs-sqlite/: package-lock.json  package.json
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-x64-gnu/: package.json
npm/win32-x64-msvc/: package.json
playground/: README.md  findscu-demo.mjs  findscu-simple-test.mjs  getscu-demo.mjs  getscu-forward-test.mjs  getscu-simple-test.mjs  movescu-simple-test.mjs  querybuilder-demo.mjs  storescu-demo.mjs
src/: lib.rs
src/findscu/: find_async.rs  mod.rs  query_builder.rs
src/getscu/: get_async.rs  mod.rs
src/movescu/: mod.rs  move_async.rs
src/object/: mod.rs
src/storescp/: mod.rs  store_async.rs
src/storescu/: mod.rs  store_async.rs
src/utils/: mod.rs  store_forward.rs
src/web/: qido.rs  wado.rs
