[package]
edition = "2021"
name = "node-dicom-rs"
version = "0.3.0"

[lib]
crate-type = ["cdylib"]

[features]
default = ["transcode"]
# support DICOM transcoding
transcode = ["dep:dicom-pixeldata"]

[dependencies]
napi = { version = "3.8.2", default-features = false, features = ["napi8", "tokio_rt"] }
napi-derive = { version = "3.5.1", features = ["type-def"] }
clap = { version = "4.5.53", features = ["derive"] }
dicom-dump = "=0.9.1"
dicom-object = "=0.9.1"
dicom-core = "0.9.1"
dicom-ul = { version = "0.9.1", features = ["async"] }
dicom-encoding = "0.9.1"
dicom-dictionary-std = "0.9.0"
dicom-transfer-syntax-registry = "0.9.1"
dicom-pixeldata = { version = "0.9.1", optional = true}
dicom-json = "0.9.0"
walkdir = "2.5.0"
indicatif = "0.18.3"
snafu = "0.8.9"
tracing = "0.1.43"
lazy_static = "1.5.0"
serde_json = "1.0.145"
serde = "1.0.228"
rust-s3 = "=0.37.0"
async-trait = "0.1.89"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tokio = { version = "1.48.0", features = ["full"] }
warp = "0.3"
uuid = { version = "1.11.0", features = ["v4"] }
image = "0.25"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
